# inventorium

./: README.md  TODO.md  dev  docker-compose.yml  inventorium.md  monad-stack.graffle  operate  report-formatted.docx  report.docx  report.md
diagrams/: architecture-diagram.graffle  monad-stack.graffle
docs/: 616 diagram.graffle  616 mockups.graffle  Inventory Tracking Program Appx.docx  Project Phase II Assignment for CS 616-spr2014.docx  Project_eval.doc  api.md  bibliography.md  setup.md
site/: Application.hs  Dockerfile  building1.json  db  inventorium.cabal  inventorium.md  seed_database.sql  stackage
site/Handler/: Api.hs
site/Query/: Facilities.hs  Inventory.hs  Reports.hs
site/app/: devel.hs
site/config/: keter.yml  models  routes  settings.yml  test-settings.yml
site/src/: Api.hs  Auth.hs  Config.hs  Docs.hs  Errors.hs  Handlers.hs  JSONUtil.hs  Main.hs  Models.hs  Sort.hs  Types.hs  Util.hs  model
site/src/Api/Handlers/: Authentication.hs  Facilities.hs  Inventory.hs  Reports.hs
site/src/Api/Types/: Authentication.hs  Facilities.hs  Inventory.hs  Reports.hs
site/src/Handlers/: Auth.hs  Authentication.hs  Errors.hs  Facilities.hs  Inventory.hs  Reports.hs
site/src/Queries/: Facilities.hs  Inventory.hs
site/src/Types/: Api.hs  App.hs  Misc.hs  Sort.hs
site/src/Types/Api/: Authentication.hs  Facilities.hs  Inventory.hs  Reports.hs
site/src/Types/Model/: Building.hs  ByTypeReport.hs  CheckIn.hs  Fields.hs  Item.hs  ItemType.hs  ItemTypeProperty.hs  Persistent.hs  ReconciliationReport.hs  Room.hs  User.hs
tests/: api.sh
tests/json/: room1.json
webserver/: Dockerfile  site.conf
