name:                inventorium
version:             0.1.0.0
synopsis:            RESTful API service for Inventorium inventory management system
description:         Please see README.md
homepage:            http://github.com/zachmay/inventorium
license:             BSD3
license-file:        LICENSE
author:              Zachary May
maintainer:          zach@sector42.net
copyright:           Zachary may
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable inventorium-api
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  extensions:          DataKinds
                     , DeriveGeneric
                     , GeneralizedNewtypeDeriving
                     , OverloadedStrings
                     , RecordWildCards
                     , TypeOperators
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , either
                     , either
                     , http-types
                     , servant
                     , servant-client
                     , servant-docs
                     , servant-server
                     , stm
                     , text
                     , transformers
                     , uuid
                     , wai
                     , warp
