name:                inventorium
version:             0.1.0.0
synopsis:            RESTful API service for Inventorium inventory management system
description:         Please see README.md
homepage:            http://github.com/zachmay/inventorium
license:             BSD3
license-file:        LICENSE
author:              Zachary May
maintainer:          zach@sector42.net
copyright:           Zachary may
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable inventorium-api
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -fcontext-stack=100
  extensions:          DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , GADTs
                     , EmptyDataDecls
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , TemplateHaskell
                     , TypeFamilies
                     , TypeOperators
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , either
                     , http-types
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , servant
                     , servant-client
                     , servant-docs
                     , servant-server
                     , stm
                     , text
                     , time
                     , transformers
                     , uuid
                     , wai
                     , wai-extra
                     , warp
